--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -219,9 +219,9 @@ License: You must have a valid license purchased only from themeforest(the above
 											<a href="queueSetup">
 												<button style="float: right; position: relative; top: 20px;" type="button" class="btn btn-primary">Create new queues</button>
 											</a>
-											<a href="{% url 'pdf' %}" target ="_blank" class="btn btn-primary mr-3">
+											<!-- <a href="{% url 'pdf' %}" target ="_blank" class="btn btn-primary mr-3">
 												<i class="fas fa-download"></i> test
-											</a>
+											</a> -->
 										</div>
 
 										<div class="tab-pane fade" id="messages">
