--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -1,17 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<!--
-Template Name: Metronic - Bootstrap 4 HTML, React, Angular 9 & VueJS Admin Dashboard Theme
-Author: KeenThemes
-Website: http://www.keenthemes.com/
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Dribbble: www.dribbble.com/keenthemes
-Like: www.facebook.com/keenthemes
-Purchase: https://1.envato.market/EA4JP
-Renew Support: https://1.envato.market/EA4JP
-License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
--->
+
 <html lang="en">
 <!--begin::Head-->
 
@@ -42,26 +31,17 @@ License: You must have a valid license purchased only from themeforest(the above
 
 	<!--begin::Layout Themes(used by all pages)-->
 
-	{% comment %} <link rel="stylesheet" href="{%static 'customer/dark.css'%}"> {% endcomment %}
-	{% comment %} <link rel="stylesheet" href="{%static 'customer/dark1.css'%}"> {% endcomment %}
 	<link rel="stylesheet" href="{%static 'customer/light.css'%}">
-	{% comment %} <link rel="stylesheet" href="{%static 'customer/light1.css'%}"> {% endcomment %}
 	<!--end::Layout Themes-->
 
-
+	<link rel="shortcut icon" href="{%static 'customer/Blue_sqrs.png' %}"/>
 
 </head>
 <!--end::Head-->
 
 <!--begin::Body-->
 
-<body id="kt_body"
-	class="header-fixed "
-	{% comment %} class="header-fixed header-mobile-fixed subheader-enabled subheader-fixed aside-enabled aside-fixed aside-minimize-hoverable page-loading" {% endcomment %}
-	{% comment %} class="header-fixed header-mobile-fixed subheader-enabled subheader-fixed aside-enabled aside-fixed aside-minimize-hoverable page-loading" {% endcomment %}
-	
-	
-	>
+<body id="kt_body" class="header-fixed ">
 
 	<!--begin::Main-->
 	<!--begin::Header Mobile-->
@@ -104,11 +84,8 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page-->
 		<div class="d-flex flex-row flex-column-fluid page">
 
-
-
 			<!--begin::Wrapper-->
-			<div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
-			
+			<div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">	
 
 				<!--begin::Header-->
 				<div id="kt_header" class="header  header-fixed ">
@@ -156,11 +133,8 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>	
 				<!--end::Header-->
 
-
-
 				<!--begin::Content-->
 				<div class="content  d-flex flex-column flex-column-fluid" id="kt_content">
-
 
 					<!--begin::Entry-->
 					<div class="d-flex flex-column-fluid">
@@ -252,10 +226,6 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		
 							</div>
-							<!--end::Card-->
-							<!-- <a href="queueSetup">
-								<button style="float: right;" type="button" class="btn btn-primary">Create new queue</button>
-							</a> -->
 
 
 							<!--begin::Modal-->
@@ -371,7 +341,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		</div>
 
 	<style>
-		.header {
+		.header, .topbar {
     background-color: #1e1e2d;
 }
 	#kt_quick_user_toggle:hover{
@@ -472,7 +442,6 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		});
 	</script>
-	<!-- <script src="{%static 'customer/queueManagement.js'%}"></script> -->
 	<!--end::Page Scripts-->
 	<!--end::Page Scripts-->
 </body>
