--- a/my_django_app/customer/Templates/Customer/queueOperatorSignup.html
+++ b/my_django_app/customer/Templates/Customer/queueOperatorSignup.html
@@ -33,25 +33,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/>        <!--end::Fonts-->
 
 
-                    <!--begin::Page Custom Styles(used by this page)-->
-                             <!-- <link href="CMPS253/Template/assets/css/pages/login/login-3.css" rel="stylesheet" type="text/css"/> -->
-                        <!--end::Page Custom Styles-->
-
-        <!--begin::Global Theme Styles(used by all pages)-->
-                    <!-- <link href="CMPS253/Template/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/> -->
-                    <!-- <link href="CMPS253/Template/assets/plugins/custom/prismjs/prismjs.bundle.css" rel="stylesheet" type="text/css"/> -->
-                    <!-- <link href="CMPS253/Template/assets/css/style.bundle.css" rel="stylesheet" type="text/css"/> -->
-                <!--end::Global Theme Styles-->
-
-        <!--begin::Layout Themes(used by all pages)-->
-
-<!-- <link href="CMPS253/Template/assets/css/themes/layout/header/base/light.css" rel="stylesheet" type="text/css"/> -->
-<!-- <link href="CMPS253/Template/assets/css/themes/layout/header/menu/light.css" rel="stylesheet" type="text/css"/> -->
-<!-- <link href="CMPS253/Template/assets/css/themes/layout/brand/dark.css" rel="stylesheet" type="text/css"/> -->
-<!-- <link href="CMPS253/Template/assets/css/themes/layout/aside/dark.css" rel="stylesheet" type="text/css"/>         -->
-<!--end::Layout Themes-->
-
-        <!-- <link rel="shortcut icon" href="CMPS253/Template/assets/media/logos/favicon.ico"/> -->
+               <link rel="shortcut icon" href="{%static 'customer/Blue_sqrs.png' %}"/>
 
             </head>
     <!--end::Head-->
